--- a/.env.development
+++ b/.env.development
@@ -10,7 +10,8 @@ NEXT_PUBLIC_NODE_2 = "https://evm.ech.network"
 # 10+ nodes balanced in each region, global
 NEXT_PUBLIC_NODE_3 = "https://draco.ech.network"
 
-NEXT_PUBLIC_NODE_PRODUCTION = "https://nodes.1ech.com"
+# NEXT_PUBLIC_NODE_PRODUCTION = "https://nodes.1ech.com"
+NEXT_PUBLIC_NODE_PRODUCTION = "https://rpc.ech.network"
 
 NEXT_PUBLIC_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
 NEXT_PUBLIC_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction-v2"
